noinst_LTLIBRARIES = libarb.la

libarb_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC = org_lwjgl_opengl_arb_ARBProgram.cpp \
      org_lwjgl_opengl_arb_ARBProgram.cpp \
      org_lwjgl_opengl_arb_ARBMatrixPalette.cpp \
      org_lwjgl_opengl_arb_ARBMultisample.cpp \
      org_lwjgl_opengl_arb_ARBMultitexture.cpp \
      org_lwjgl_opengl_arb_ARBPointParameters.cpp \
      org_lwjgl_opengl_arb_ARBProgram.cpp \
      org_lwjgl_opengl_arb_ARBTextureCompression.cpp \
      org_lwjgl_opengl_arb_ARBTransposeMatrix.cpp \
      org_lwjgl_opengl_arb_ARBVertexBlend.cpp \
      org_lwjgl_opengl_arb_ARBVertexBufferObject.cpp \
      org_lwjgl_opengl_arb_ARBVertexProgram.cpp \
      org_lwjgl_opengl_arb_ARBWindowPos.cpp
