noinst_LTLIBRARIES = libarb.la

libarb_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC = org_lwjgl_opengl_ARBProgram.cpp \
      org_lwjgl_opengl_ARBProgram.cpp \
      org_lwjgl_opengl_ARBMatrixPalette.cpp \
      org_lwjgl_opengl_ARBMultisample.cpp \
      org_lwjgl_opengl_ARBMultitexture.cpp \
      org_lwjgl_opengl_ARBPointParameters.cpp \
      org_lwjgl_opengl_ARBProgram.cpp \
      org_lwjgl_opengl_ARBTextureCompression.cpp \
      org_lwjgl_opengl_ARBTransposeMatrix.cpp \
      org_lwjgl_opengl_ARBVertexBlend.cpp \
      org_lwjgl_opengl_ARBVertexBufferObject.cpp \
      org_lwjgl_opengl_ARBVertexProgram.cpp \
      org_lwjgl_opengl_ARBWindowPos.cpp \
      org_lwjgl_opengl_ARBOcclusionQuery.cpp \
      org_lwjgl_opengl_ARBShaderObjects.cpp \
      org_lwjgl_opengl_ARBVertexShader.cpp
