noinst_LTLIBRARIES = libarb.la

libarb_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC = org_lwjgl_opengl_ARBBufferObject.c \
	org_lwjgl_opengl_ARBDrawBuffers.c \
	org_lwjgl_opengl_ARBProgram.c \
	org_lwjgl_opengl_ARBMatrixPalette.c \
	org_lwjgl_opengl_ARBMultisample.c \
	org_lwjgl_opengl_ARBMultitexture.c \
	org_lwjgl_opengl_ARBPointParameters.c \
	org_lwjgl_opengl_ARBTextureCompression.c \
	org_lwjgl_opengl_ARBTransposeMatrix.c \
	org_lwjgl_opengl_ARBVertexBlend.c \
	org_lwjgl_opengl_ARBVertexProgram.c \
	org_lwjgl_opengl_ARBWindowPos.c \
	org_lwjgl_opengl_ARBOcclusionQuery.c \
	org_lwjgl_opengl_ARBShaderObjects.c \
	org_lwjgl_opengl_ARBVertexShader.c \
	org_lwjgl_opengl_ARBImaging.c
