noinst_LTLIBRARIES = libati.la

libati_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_ati_ATIElementArray.cpp \
    org_lwjgl_opengl_ati_ATIElementArray.cpp \
    org_lwjgl_opengl_ati_ATIEnvmapBumpmap.cpp \
    org_lwjgl_opengl_ati_ATIFragmentShader.cpp \
    org_lwjgl_opengl_ati_ATIPnTriangles.cpp \
    org_lwjgl_opengl_ati_ATISeparateStencil.cpp \
    org_lwjgl_opengl_ati_ATIVertexArrayObject.cpp \
    org_lwjgl_opengl_ati_ATIVertexStreams.cpp \
    org_lwjgl_opengl_ati_ATIDrawBuffers.cpp \
    org_lwjgl_opengl_ati_ATIMapObjectBuffer.cpp \
    org_lwjgl_opengl_ati_ATIVertexAttribArrayObject.cpp
