noinst_LTLIBRARIES = libati.la

libati_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_ATIElementArray.cpp \
    org_lwjgl_opengl_ATIEnvmapBumpmap.cpp \
    org_lwjgl_opengl_ATIFragmentShader.cpp \
    org_lwjgl_opengl_ATIPnTriangles.cpp \
    org_lwjgl_opengl_ATISeparateStencil.cpp \
    org_lwjgl_opengl_ATIVertexArrayObject.cpp \
    org_lwjgl_opengl_ATIVertexStreams.cpp \
    org_lwjgl_opengl_ATIDrawBuffers.cpp \
    org_lwjgl_opengl_ATIMapObjectBuffer.cpp \
    org_lwjgl_opengl_ATIVertexAttribArrayObject.cpp
