noinst_LTLIBRARIES = libati.la

libati_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_ATIElementArray.c \
    org_lwjgl_opengl_ATIEnvmapBumpmap.c \
    org_lwjgl_opengl_ATIFragmentShader.c \
    org_lwjgl_opengl_ATIPnTriangles.c \
    org_lwjgl_opengl_ATISeparateStencil.c \
    org_lwjgl_opengl_ATIVertexArrayObject.c \
    org_lwjgl_opengl_ATIVertexStreams.c \
    org_lwjgl_opengl_ATIDrawBuffers.c \
    org_lwjgl_opengl_ATIMapObjectBuffer.c \
    org_lwjgl_opengl_ATIVertexAttribArrayObject.c
