noinst_LTLIBRARIES = libcallbacks.la

libcallbacks_la_SOURCES = $(COMMON) $(CALLBACKS)
libcallbacks_la_CPPFLAGS = -D_DEBUG

INCLUDES = -I../

COMMON = \
  CallbackContainer.cpp \
  CallbackContainer.h \
  CallbackManager.cpp \
  CallbackManager.h \
  JavaMethod.cpp \
  JavaMethod.h
  
CALLBACKS = \
  GLUQuadricCallbacks.cpp \
  GLUQuadricCallbacks.h
