noinst_LTLIBRARIES = libext.la

libext_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_ext_EXTBlendFuncSeparate.cpp \
    org_lwjgl_opengl_ext_EXTCompiledVertexArray.cpp \
    org_lwjgl_opengl_ext_EXTDrawRangeElements.cpp \
    org_lwjgl_opengl_ext_EXTFogCoord.cpp \
    org_lwjgl_opengl_ext_EXTMultiDrawArrays.cpp \
    org_lwjgl_opengl_ext_EXTPointParameters.cpp \
    org_lwjgl_opengl_ext_EXTSecondaryColor.cpp \
    org_lwjgl_opengl_ext_EXTStencilTwoSide.cpp \
    org_lwjgl_opengl_ext_EXTVertexShader.cpp \
    org_lwjgl_opengl_ext_EXTVertexWeighting.cpp
