noinst_LTLIBRARIES = libext.la

libext_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_EXTBlendEquationSeparate.cpp \
	org_lwjgl_opengl_EXTBlendFuncSeparate.cpp \
    org_lwjgl_opengl_EXTCompiledVertexArray.cpp \
    org_lwjgl_opengl_EXTDepthBoundsTest.cpp \
    org_lwjgl_opengl_EXTDrawRangeElements.cpp \
    org_lwjgl_opengl_EXTFogCoord.cpp \
    org_lwjgl_opengl_EXTMultiDrawArrays.cpp \
    org_lwjgl_opengl_EXTPointParameters.cpp \
    org_lwjgl_opengl_EXTSecondaryColor.cpp \
    org_lwjgl_opengl_EXTStencilTwoSide.cpp \
    org_lwjgl_opengl_EXTVertexShader.cpp \
    org_lwjgl_opengl_EXTVertexWeighting.cpp
