noinst_LTLIBRARIES = libext.la

libext_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_EXTBlendEquationSeparate.c \
	org_lwjgl_opengl_EXTBlendFuncSeparate.c \
    org_lwjgl_opengl_EXTCompiledVertexArray.c \
    org_lwjgl_opengl_EXTDepthBoundsTest.c \
    org_lwjgl_opengl_EXTDrawRangeElements.c \
    org_lwjgl_opengl_EXTFogCoord.c \
    org_lwjgl_opengl_EXTMultiDrawArrays.c \
    org_lwjgl_opengl_EXTPointParameters.c \
    org_lwjgl_opengl_EXTSecondaryColor.c \
    org_lwjgl_opengl_EXTStencilTwoSide.c \
    org_lwjgl_opengl_EXTVertexShader.c \
    org_lwjgl_opengl_EXTVertexWeighting.c
