lib_LTLIBRARIES = liblwjgl-fmod3.la
liblwjgl_fmod3_la_SOURCES = $(FMOD_SOURCE)
liblwjgl_fmod3_la_LIBADD = $(DEP_LIBS)
liblwjgl_fmod3_la_DEPENDENCIES = $(DEP_LIBS)
INCLUDES = -I..
DEP_LIBS = ../libtools.la

FMOD_SOURCE = extfmod3.c \
              org_lwjgl_fmod3_FMOD.c \
              org_lwjgl_fmod3_FMusic.c \
              org_lwjgl_fmod3_FSound.c
