noinst_LTLIBRARIES = libnv.la

libnv_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_nv_NVEvaluators.cpp \
    org_lwjgl_opengl_nv_NVFence.cpp \
    org_lwjgl_opengl_nv_NVFragmentProgram.cpp \
    org_lwjgl_opengl_nv_NVOcclusionQuery.cpp \
    org_lwjgl_opengl_nv_NVPointSprite.cpp \
    org_lwjgl_opengl_nv_NVProgram.cpp \
    org_lwjgl_opengl_nv_NVRegisterCombiners.cpp \
    org_lwjgl_opengl_nv_NVRegisterCombiners2.cpp \
    org_lwjgl_opengl_nv_NVVertexArrayRange.cpp \
    org_lwjgl_opengl_nv_NVVertexProgram.cpp
