noinst_LTLIBRARIES = libnv.la

libnv_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_NVEvaluators.cpp \
    org_lwjgl_opengl_NVFence.cpp \
    org_lwjgl_opengl_NVFragmentProgram.cpp \
    org_lwjgl_opengl_NVOcclusionQuery.cpp \
    org_lwjgl_opengl_NVPointSprite.cpp \
    org_lwjgl_opengl_NVProgram.cpp \
    org_lwjgl_opengl_NVRegisterCombiners.cpp \
    org_lwjgl_opengl_NVRegisterCombiners2.cpp \
    org_lwjgl_opengl_NVVertexArrayRange.cpp \
    org_lwjgl_opengl_NVVertexProgram.cpp \
    org_lwjgl_opengl_NVHalfFloat.cpp \
    org_lwjgl_opengl_NVPixelDataRange.cpp \
    org_lwjgl_opengl_NVPrimitiveRestart.cpp
