noinst_LTLIBRARIES = libnv.la

libnv_la_SOURCES = $(SRC)
INCLUDES=-I..
SRC=org_lwjgl_opengl_NVEvaluators.c \
    org_lwjgl_opengl_NVFence.c \
    org_lwjgl_opengl_NVFragmentProgram.c \
    org_lwjgl_opengl_NVOcclusionQuery.c \
    org_lwjgl_opengl_NVPointSprite.c \
    org_lwjgl_opengl_NVProgram.c \
    org_lwjgl_opengl_NVRegisterCombiners.c \
    org_lwjgl_opengl_NVRegisterCombiners2.c \
    org_lwjgl_opengl_NVVertexArrayRange.c \
    org_lwjgl_opengl_NVVertexProgram.c \
    org_lwjgl_opengl_NVHalfFloat.c \
    org_lwjgl_opengl_NVPixelDataRange.c \
    org_lwjgl_opengl_NVPrimitiveRestart.c
